src/objects/skuid__Page_Version__c.object
<CustomObject>
    <fields>
        <fullName>skuid__Description__c</fullName>
        <description>A description of a non-auto-saved Page Version</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>skuid__IsAutoSave__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was this Page Version saved automatically by Skuid (as opposed to manually by a user)?</description>
        <label>Is Auto Save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Layout2__c</fullName>
        <label>Layout2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Layout3__c</fullName>
        <label>Layout3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Layout4__c</fullName>
        <label>Layout4</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Page__c</fullName>
        <label>Page</label>
        <referenceTo>skuid__Page__c</referenceTo>
        <relationshipLabel>Page Versions</relationshipLabel>
        <relationshipName>Page_Versions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Page Version</label>
    <nameField>
        <displayFormat>PV-{0000}-{YY}-{MM}-{DD}</displayFormat>
        <label>Version Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>